cluster/apps/vpn/v2ray/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v2ray-svc
  namespace: vpn
spec:
  type: ClusterIP
  selector:
    app: v2ray
  ports:
    - name: tcp
      protocol: TCP
      port: 10086
      targetPort: 10086
