cluster/apps/vpn/v2ray/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v2ray-ingress
  namespace: vpn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    external-dns/is-public: "true"
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/enable-websocket-upgrade: "true"
spec:
  ingressClassName: "external"
  rules:
    - host: "v2ray.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: v2ray-svc
                port:
                  number: 10086
  tls:
    - hosts:
        - "v2ray.${SECRET_DOMAIN}"
